lab question added